--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -61,6 +61,7 @@
             tools:ignore="VisualLintLongText" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/begin_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
