--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
+    android:name="com.smaglo360.compositiongame.presentation.WelcomeFragment"
     android:layout_height="match_parent"
     tools:context=".presentation.MainActivity">
 
