--- a/app/src/main/res/layout/fragment_game_result.xml
+++ b/app/src/main/res/layout/fragment_game_result.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.GameResult">
+    tools:context=".presentation.GameResultFragment">
 
     <ImageView
         android:id="@+id/emoji_result"
