--- a/app/src/main/res/layout/fragment_level_options.xml
+++ b/app/src/main/res/layout/fragment_level_options.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.LevelOptions">
+    tools:context=".presentation.LevelOptionsFragment">
 
     <TextView
         android:id="@+id/tv_title"
@@ -18,6 +18,7 @@
         android:textStyle="bold" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/mb_test_level"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_purple"
@@ -29,6 +30,7 @@
         tools:ignore="VisualLintButtonSize" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/mb_easy_level"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -40,6 +42,7 @@
         tools:ignore="TextContrastCheck,VisualLintButtonSize" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/mb_medium_level"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -51,6 +54,7 @@
         tools:ignore="TextContrastCheck,VisualLintButtonSize" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/mb_hard_level"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
