GameViewModel is read for implementation

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_sum"
         app:layout_constraintVertical_bias="0.445"
         tools:ignore="TextContrastCheck"
-        tools:text="\?" />
+        android:text="\?" />
 
     <TextView
         android:id="@+id/tv_answer_progress"
