--- a/app/src/main/res/layout/fragment_game_result.xml
+++ b/app/src/main/res/layout/fragment_game_result.xml
@@ -1,81 +1,95 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.GameResultFragment">
+<layout>
 
-    <ImageView
-        android:id="@+id/emoji_result"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
-        android:layout_marginHorizontal="48dp"
-        android:layout_marginVertical="64dp"
-        android:contentDescription="@string/game_over"
-        app:layout_constraintBottom_toTopOf="@id/tv_require_answers"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_success" />
+    <data>
 
-    <TextView
-        android:id="@+id/tv_require_answers"
+        <variable
+            name="gameResult"
+            type="com.smaglo360.compositiongame.domain.enteties.GameResult" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/require_answers"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emoji_result" />
+        android:layout_height="match_parent"
+        tools:context=".presentation.GameResultFragment">
 
-    <TextView
-        android:id="@+id/tv_score_answers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/your_score"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_require_answers" />
+        <ImageView
+            android:id="@+id/emoji_result"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:layout_marginHorizontal="48dp"
+            android:layout_marginVertical="64dp"
+            android:contentDescription="@string/game_over"
+            app:layout_constraintBottom_toTopOf="@id/tv_require_answers"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:resultEmoji="@{gameResult.winner}"
+            tools:src="@drawable/ic_success" />
 
-    <TextView
-        android:id="@+id/tv_require_percentage_answers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/required_percentage_answers"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_score_answers" />
+        <TextView
+            android:id="@+id/tv_require_answers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/emoji_result"
+            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
+            tools:text="@string/require_answers" />
 
-    <TextView
-        android:id="@+id/tv_right_answers_percentage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/percentage_right_answers"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_require_percentage_answers" />
+        <TextView
+            android:id="@+id/tv_score_answers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_require_answers"
+            app:yourScore="@{gameResult.countOfRightAnswers}"
+            tools:text="@string/your_score" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/mb_start_again"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:backgroundTint="@android:color/holo_purple"
-        android:text="@string/start_again_btn"
-        android:textSize="16sp"
-        app:cornerRadius="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="VisualLintButtonSize" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_require_percentage_answers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
+            app:requiredPercentage="@{gameResult.gameSettings.minPercentageOfRightAnswers}"
+            tools:text="@string/required_percentage_answers" />
+
+        <TextView
+            android:id="@+id/tv_right_answers_percentage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_require_percentage_answers"
+            app:percentageOfRightAnswers="@{gameResult}"
+            tools:text="@string/percentage_right_answers" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/mb_start_again"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:backgroundTint="@android:color/holo_purple"
+            android:text="@string/start_again_btn"
+            android:textSize="16sp"
+            app:cornerRadius="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="VisualLintButtonSize" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
